--- a/receipt-processor/package.json
+++ b/receipt-processor/package.json
@@ -25,7 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "helmet": "^8.1.0"
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
