--- a/receipt-processor/package.json
+++ b/receipt-processor/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "eslint": "^9.24.0",
