--- a/receipt-processor/package.json
+++ b/receipt-processor/package.json
@@ -14,8 +14,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src /**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
-    "prepare": "husky install"
+    "format:check": "prettier --check \"src/**/*.ts\""
   },
   "keywords": [],
   "author": "",
@@ -44,7 +43,6 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
-    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.5.1",
     "nodemon": "^3.1.9",
